# high-frequency-cloud-robotics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: cloud_parameter.json  local_parameter.json
data/: plot_cloud_data.m  plot_robot_data.m
include/: TDPA.h  TDPA.tpp  data_types.h  franka_dynamics.cpp  franka_dynamics.h  franka_kinematics.h  motion_generator.cpp  motion_generator.h  print_utils.cpp  print_utils.h  recorder.cpp  recorder.h  udp_utils.cpp  udp_utils.h
src/: cloud_controller.cpp  local_controller.cpp
